fix dopcopt clone in hacky cmake way

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,15 +5,8 @@ find_package(Geant4 REQUIRED)
 
 include(${Geant4_USE_FILE})
 
-include(ExternalProject)
-ExternalProject_Add(docopt.cpp
-  PREFIX ${PROJECT_SOURCE_DIR}/external/
-  GIT_REPOSITORY https://github.com/docopt/docopt.cpp.git
-  LOG_DOWNLOAD ON
-  LOG_CONFIGURE ON
-  LOG_BUILD ON
-  LOG_INSTALL ON
-)
+execute_process(COMMAND git clone https://github.com/docopt/docopt.cpp.git
+  ${PROJECT_SOURCE_DIR}/external/docopt.cpp)
 
 include_directories(${PROJECT_SOURCE_DIR}/src)
 include_directories(${PROJECT_SOURCE_DIR}/external/seaweed)
