fix docopt dep. now clones & builds at compiletime

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ include(${Geant4_USE_FILE})
 #  ${PROJECT_SOURCE_DIR}/external/docopt.cpp)
 set( CMAKE_C_FLAGS "-Wall -g")
 set(DOCOPT_ROOT ${PROJECT_SOURCE_DIR}/external/docopt)
-set(DOCOPT_INCLUDE_DIRS ${DOCOPT_ROOT})
-#set(DOCOPT_LIBRARIES ${DOCOPT_ROOT})
+set(DOCOPT_INCLUDE_DIRS ${DOCOPT_ROOT}/include/docopt)
+set(DOCOPT_LIBRARIES ${DOCOPT_ROOT}/lib/libdocopt.a)
 set(docopt_INSTALL_DIR "${DOCOPT_ROOT}")
 set(docopt_CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${docopt_INSTALL_DIR})
 include(ExternalProject)
