docopt pull finally working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,15 +21,20 @@ ExternalProject_Add(docopt
   INSTALL_DIR ${DOCOPT_ROOT}
   CMAKE_ARGS ${docopt_CMAKE_ARGS}
 )
+add_library(libdocopt STATIC IMPORTED)
+set_target_properties(libdocopt PROPERTIES IMPORTED_LOCATION ${DOCOPT_LIBRARIES})
+add_dependencies(libdocopt docopt)
+
 include_directories(${DOCOPT_INCLUDE_DIRS})
+
 include_directories(${PROJECT_SOURCE_DIR}/external/seaweed)
 include_directories(${PROJECT_SOURCE_DIR}/src)
-
 file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cc)
 file(GLOB headers ${PROJECT_SOURCE_DIR}/src/*.h)
 
 add_executable(km3sim km3sim.cc ${sources} ${headers})
 target_link_libraries(km3sim ${Geant4_LIBRARIES})
+target_link_libraries(km3sim libdocopt ${DOCOPT_LIBRARIES})
 
 set(KM3SIM_SCRIPTS
 	run_km3sim.sh
