--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,9 +41,9 @@ file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cc)
 file(GLOB headers ${PROJECT_SOURCE_DIR}/src/*.h)
 
 add_executable(km3sim km3sim.cc ${sources} ${headers})
-#target_link_libraries(km3sim libdocopt ${DOCOPT_LIBRARIES} ${Geant4_LIBRARIES})
 target_link_libraries(km3sim ${Geant4_LIBRARIES})
-target_link_libraries(km3sim libdocopt ${DOCOPT_LIBRARIES})
+#target_link_libraries(km3sim libdocopt ${DOCOPT_LIBRARIES})
+# TODO: add seaweed
 
 set(KM3SIM_SCRIPTS
 	run_km3sim.sh
