fix docopt linking & compile issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ include(${Geant4_USE_FILE})
 set( CMAKE_C_FLAGS "-Wall -g")
 set(DOCOPT_ROOT ${PROJECT_SOURCE_DIR}/external/docopt)
 set(DOCOPT_INCLUDE_DIRS ${DOCOPT_ROOT}/include/docopt)
-set(DOCOPT_LIBRARIES ${DOCOPT_ROOT}/lib/libdocopt.a)
+set(DOCOPT_LIBRARIES ${DOCOPT_ROOT}/lib64/libdocopt.a)
 set(docopt_INSTALL_DIR "${DOCOPT_ROOT}")
 set(docopt_CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${docopt_INSTALL_DIR})
 include(ExternalProject)
@@ -42,7 +42,7 @@ file(GLOB headers ${PROJECT_SOURCE_DIR}/src/*.h)
 
 add_executable(km3sim km3sim.cc ${sources} ${headers})
 target_link_libraries(km3sim ${Geant4_LIBRARIES})
-target_link_libraries(km3sim libdocopt ${DOCOPT_LIBRARIES})
+target_link_libraries(km3sim libdocopt)
 # TODO: add seaweed
 
 set(KM3SIM_SCRIPTS
