--- a/km3sim_r1v6/Makefile
+++ b/km3sim_r1v6/Makefile
@@ -3,13 +3,15 @@
 # GNUmakefile for examples module.  Gabriele Cosmo, 06/04/98.
 # --------------------------------------------------------------
 
+CXX := mpic++
+
 name := KM3Sim
 G4TARGET := $(name)
 G4EXLIB := true
 G4WORKDIR := WORK
-CLHEP_BASE_DIR := /sps/km3net/users/tsirigot/HOURS/geant4.9.6.p02-install/
-CLHEP_INCLUDE_DIR := /sps/km3net/users/tsirigot/HOURS/geant4.9.6.p02-install/include
-CLHEP_LIB_DIR := /sps/km3net/users/tsirigot/HOURS/geant4.9.6.p02-install/lib64
+CLHEP_BASE_DIR := $(G4INSTALL)/
+CLHEP_INCLUDE_DIR := $(G4INSTALL)/include
+CLHEP_LIB_DIR := $(G4INSTALL)/lib64
 CLHEP_LIB := G4clhep
 G4SYSTEM := Linux-g++
 #CXXFLAGS := -g -O0
@@ -18,15 +20,23 @@ CPPVERBOSE := true
 
 G4LIB_USE_EXPAT := true
 G4LIB_BUILD_GDML := true
-XERCESCROOT := /afs/cern.ch/sw/lcg/external/XercesC/3.1.1p2/x86_64-slc6-gcc47-opt
+##XERCESCROOT := /afs/cern.ch/sw/lcg/external/XercesC/3.1.1p2/x86_64-slc6-gcc47-opt
 #in gdmllibs also load evt libs
-GDMLLIBS := -levtio -lxerces-c -lpthread
+##GDMLLIBS := -levtio -lxerces-c -lpthread
+GDMLLIBS := -lxerces-c -lpthread -lmpich -lmpichcxx
+
 G4LIB_BUILD_ZLIB := true
 #CPPFLAGS += --static
 
-CPPFLAGS += -I/sps/km3net/users/tsirigot/HOURS/v1r12seawiet/inc
-LDFLAGS += -L/sps/km3net/users/tsirigot/HOURS/v1r12seawiet/lib -L/afs/cern.ch/sw/lcg/external/XercesC/3.1.1p2/x86_64-slc6-gcc47-opt/lib
+CPPFLAGS += -DG4MPI_SUPPORT
+CPPFLAGS += -I/state/partition1/geant4.9.6.p02/source/examples/extended/parallel/MPI/source/include
+CPPFLAGS += -I/usr/include/mpich-x86_64
+LDFLAGS += -L/usr/lib64/mpich/lib
 
+##LDFLAGS += -L/sps/km3net/users/tsirigot/HOURS/v1r12seawiet/lib -L/afs/cern.ch/sw/lcg/external/XercesC/3.1.1p2/x86_64-slc6-gcc47-opt/lib
+
+
+CPPFLAGS += -DG4JUST_COUNT_PHOTONS
 # Uncomment the following if you want to compile hadronic physics (includes muon photonuclear interaction).
 # When hadronic physics is not included only basic particles are constructed
 CPPFLAGS += -DG4HADRONIC_COMPILE
@@ -66,16 +76,23 @@ CPPFLAGS += -DG4ENABLE_MIE
 # flag for printing header with cathod information
 # CPPFLAGS += -DG4PRINT_HEADER
 
-ifndef G4INSTALL
-G4INSTALL = /sps/km3net/users/tsirigot/HOURS/geant4.9.6.p02-install/share/Geant4-9.6.2/geant4make
-endif
+
+G4INSTALL := $(shell ls -d $(G4INSTALL)/share/G*)/geant4make
+
+#ifndef G4INSTALL
+#G4INSTALL = /sps/km3net/users/tsirigot/HOURS/geant4.9.6.p02-install/share/#Geant4-9.6.2/geant4make
+#endif
 
 .PHONY: all
 all: lib bin
 
 G4INCLUDE = $(G4INSTALL)/../../../include/Geant4
-G4LIB = $(G4INSTALL)/../../../lib64/Geant4-9.6.2
-
+PREG4LIB = $(G4INSTALL)/../../../lib64/
+G4LIB := $(shell ls -d $(PREG4LIB)/G*)
+#G4LIB = $(G4INSTALL)/../../../lib64/Geant4-9.6.2
 
 include $(G4INSTALL)/config/binmake.gmk
+
+CXX :=/usr/lib64/mpich/bin/mpic++
+
 
