last try before bed

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ addons:
     - geant4
     - sourceline: 'deb http://lcg-heppkg.web.cern.ch/lcg-heppkg/debian stable hep'
     - sourceline: 'deb-src http://lcg-heppkg.web.cern.ch/lcg-heppkg/debian stable hep'
+    packages:
+    - geant4
 
 script:
   - mkdir -p build
